Add endpoints to fetch studies
